# java-test-coverage-example

./: .gitignore  README.md  pom.xml
.github/: copilot-instructions.md
.github/agents/: brimley-coverage-seeder.agent.md  brimley-coverage-worker-isolated.agent.md  brimley-coverage-worker.agent.md  brimley-jacoco-coverage-analyst.agent.md  coverage-coordinator-isolated.agent.md  coverage-coordinator.agent.md  jacoco-coverage-analyst.agent.md  java-test-writer.agent.md
brimley-swarm/: README.md  brimley.yaml  checkout_classes.py  class_state_tools.py  create_run.sql  di_provider.py  get_run_summary.sql  hello.md  import_jacoco_report.py  init_db.py  list_uncovered_classes.sql  pyproject.toml  swarm_utils.py
brimley-swarm/tests/: conftest.py  test_queue_lifecycle.py  test_seed_slice.py
brimley-swarm/tests/fixtures/: jacoco_sample.xml
docs/: brimley-backed-agentic-test-coverage-swarm-design.md  brimley-code-coverage-swarm-implementation-plan.md  how-to-kick-off-the-autonomous-swarm.md
src/main/java/com/example/enums/: EmployeeStatus.java  OrderStatus.java  PaymentMethod.java  Priority.java  ProductCategory.java
src/main/java/com/example/model/: Address.java  AuditLog.java  BankAccount.java  Car.java  CarrierInfo.java  Category.java  Comment.java  Company.java  Customer.java  Department.java  Email.java  Employee.java  FlightReservation.java  HotelBooking.java  Inventory.java  Invoice.java  Notification.java  Order.java  OrderItem.java  Payment.java  Permission.java  Person.java  PhoneNumber.java  Product.java  (+11 more)
src/test/java/com/example/: PlaceholderTest.java
(+92 files in other folders)
