[project]
name = "brimley-swarm"
version = "0.1.0"
description = "Local Brimley-backed coverage swarm for JaCoCo-driven test orchestration"
authors = [
    {name = "farkelheizen",email = "billspratley@gmail.com"}
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "brimley[fastmcp] (>=0.8.0,<0.9.0)"
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
